--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <div style="width:47.4666666%;color: white;display: inline;margin-left: 1.25%;margin-right: 1.25%;float:left;">
                     <h1 class="lead" style="font-weight: 400;font-size: 72px;margin-bottom: 15px;letter-spacing: -2px;text-align: left;">XLT
                     </h1><br/>
-                    <h3 style="font-weight: 400;font-size: 1.5em;line-height: 1.25;text-align: left;">Free Market
-                        Dencentralized Application Platform</h3>
+                    <h3 style="font-weight: 400;font-size: 1.5em;line-height: 1.25;text-align: left;">The Platform for Free Market
+                        Dencentralization</h3>
                 </div>
             </div>
         </div>
