--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container"  style="min-width:100%;background-color: #202428;">
-        <div class="row" id="home-content" style="min-height: 600px; ">
+    <div class="container" id="home-content" style="min-width:100%;background-color: #202428;">
+        <div class="container" style="min-height: 600px; ">
             <div class="starter-template" style="min-width: 768px;margin:0px auto;">
                 <div style="width:47.4666666%;color: white;display: inline;margin-left: 1.25%;margin-right: 1.25%;float:left;">
                     <h1 class="lead" style="font-weight: 400;font-size: 72px;margin-bottom: 15px;letter-spacing: -2px;text-align: left;">XLT
