--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="https://link.litetokens.org">LiteLink</a></li>
+                    <li class="active"><a href="https://litescan.org">LiteScan</a></li>
+                    <li><a href="https://link.litetokens.org">LiteLink</a></li>
                     <li><a href="https://dao.litetokens.org">LiteDAO</a></li>
                     <li><a href="https://bridge.litetokens.org">LiteBridge</a></li>
                     <li><a href="https://defi.litetokens.org">LiteDeFi</a></li>
@@ -75,9 +76,8 @@
                     <li><a href="https://lend.litetokens.org">LiteLend</a></li>
                     <li><a href="https://swap.litetokens.org">LiteSwap</a></li>
                     <li><a href="https://grid.litetokens.org">LiteGrid</a></li>
-                    <li><a href="https://ltx.litetokens.org">Lite Protocol</a></li>
-                    <li><a href="https://sol.litetokens.org">Sol Protocol</a></li>
-                    <li><a href="https://envoys.litetokens.org">Envoys</a></li>
+                    <li><a href="https://ltx.litetokens.org">Lite</a></li>
+                    <li><a href="https://sol.litetokens.org">Sol</a></li> 
                 </ul>
             </div>
             <!--/.nav-collapse -->
